apps/base/hotel-package/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-package
  namespace: hotel-package
spec:
  selector:
    app: hotel-package
  ports:
    - port: 80
      targetPort: 80
